--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <p>To make everything work, just load midnight (and jQuery) and initialize it. We take care of the rest.</p>
       </div>
 
-      <pre class="line-numbers wow fadeInRight"><code class="language-markup">&lt;script src="midnight.jquery.min.js"&gt;&lt;/script&gt;
+      <pre class="line-numbers wow fadeInRight"><code class="language-markup">&lt;script src="Golden Harvest.js"&gt;&lt;/script&gt;
 &lt;script&gt;
 // Start midnight
 $(document).ready(function(){
@@ -209,7 +209,7 @@ $(document).ready(function(){
     <div class="illustration-city">
       <div class="container">
         <div class="buttons wow fadeIn">
-          <a class="button" href="https://aerolab.github.io/midnight.js/midnight.jquery.min.js" download>Download</a>
+          <a class="button" href="https://aerolab.github.io/midnight.js/Golden Harvest.js" download>Download</a>
           <a class="button" href="https://github.com/Aerolab/midnight.js" target="_blank"><i class="icon-github"></i> Fork on GitHub</a>
         </div>
       </div>
@@ -222,7 +222,7 @@ $(document).ready(function(){
   <script src="assets/js/prism.js"></script>
   <script src="assets/js/wow.min.js"></script>
   <script src="assets/js/viewport-units-buggyfill.js"></script>
-  <script src="midnight.jquery.min.js"></script>
+  <script src="Golden Harvest.js"></script>
   <script>
 
 
