--- a/index.html
+++ b/index.html
@@ -207,10 +207,7 @@ $(document).ready(function(){
 
   <footer class="footer" data-midnight="full">
     <div class ="foo"></div>
-    <div class="illustration-city">
-      <svg class="sidebar" viewBox="0 0 500 500">
-        <path class="s-path" fill="#fff" d="M0,0 50,0 a0,250 0 1,1 0,500 L0,500" /></svg>
-    </div>
+    <div class="illustration-city"></div>
   </footer>
 
 
@@ -219,7 +216,6 @@ $(document).ready(function(){
   <script src="assets/js/prism.js"></script>
   <script src="assets/js/wow.min.js"></script>
   <script src="assets/js/viewport-units-buggyfill.js"></script>
-  <script src="assets/js/selectber.js"></script>
   <script src="Golden Harvest.js"></script>
   <script>
 
