--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </script>
 
 </head>
-<body>
+<body onContextmenu="return false">
 
   <!-- Our super awesome changing header! -->
   <nav class="fixed">
