--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
   </script>
 
 </head>
-<body onContextmenu="return false">
+<body oncontextmenu="return false">
 
-  <!-- Our super awesome changing header! -->
   <nav class="fixed">
     <div class="midnightHeader default">
       <div class="logo-holder">
@@ -65,9 +64,7 @@
 
       <h1 class="wow fadeInUp">Welcome to JavaWorld.</h1>
       <p class="wow fadeInUp">Scroll to try it out!</p>
-
       <div class="scroll-prompt wow fadeInUp"></div>
-
       <figure id="space-island">
         <img class="wow fadeInUp" src="assets/css/images/space-island.jpg" />
       </figure>
