--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <p class="tissot"><strong>ようこそ訓練サイトへ！</strong></p>
       <p class="tissot">こちら基礎レベル１での訓練になります。</p>
       <p class="tissot">実際にご自分のエディターでJavaを書き、コンパイルして見てください。</p>
-      <p class="tissot">わからないときは近くのJava担当に聞いて見てくださいね♪</p>
+      <p class="tissot">わからないときは近くのJava担当またはMgrに聞いて見てくださいね♪</p>
       <p class="tissot"></p>
       <h1 class="wow fadeInUp">Welcome to JavaWorld.</h1>
       <p class="wow fadeInUp">Scroll to try it out!</p>
@@ -82,7 +82,24 @@
         <p>必須条件 3 :使用するファイル数は<em>最大2つまで</em>とすること。</p>
       </div>
 
-      <pre class="line-numbers wow fadeInRight"><code></code></pre>
+      <pre class="line-numbers wow fadeInRight"><code class="language-css">efkhwoefhwoiewhfo {
+        bhaoewihogahoe
+        heowhgwogihe;
+      }
+      gkwehiogwihgoewihwo {
+        eihwoigehwoge
+        wehgwoighwoiwhwepighwoeghhw
+        weogiwhowhg
+
+        djaioehgwieo
+
+        wehgowigehwoeh
+
+
+        ehogiwhoiwho
+      }
+
+        </code></pre>
     </div>
 
   </section>
@@ -98,7 +115,18 @@
         <p>4. 引数の値が20以下の場合、「未成年です。」引数が20以上場合、「大人です。」と出力せよ。</p>
       </div>
 
-      <pre class="line-numbers wow fadeInRight"><code></code></pre>
+      <pre class="line-numbers wow fadeInRight"><code class="language-css"></code>kaseiiki.default {
+  background: none;
+  color: black;
+}
+.kaseiiki.white {
+  background: white;
+  color: black;
+}
+.kaseiiki.blue {
+  background: blue;
+  color: white;
+}</pre>
     </div>
 
   </section>
@@ -113,7 +141,7 @@
         <p>Use whatever CSS or markup you like for each one. They will be switched automatically when necessary.</p>
       </div>
 
-      <pre class="line-numbers wow fadeInRight"><code class="language-css">.kaseiiki.default {
+      <pre class="line-numbers wow fadeInRight"><code class="language-css">kaseiiki.default {
   background: none;
   color: black;
 }
@@ -139,7 +167,18 @@
         <p>To make everything work, just load energy (and jQuery) and initialize it. We take care of the rest.</p>
       </div>
 
-      <pre class="line-numbers wow fadeInRight"><code></code></pre>
+      <pre class="line-numbers wow fadeInRight"><code class="language-css">kaseiiki.default {
+  background: none;
+  color: black;
+}
+.kaseiiki.white {
+  background: white;
+  color: black;
+}
+.kaseiiki.blue {
+  background: blue;
+  color: white;
+}</code></pre>
     </div>
 
   </section>
@@ -159,30 +198,35 @@
       </div>
 
 
-      <pre class="line-numbers wow fadeInRight"><code></code></pre>
+      <pre class="line-numbers wow fadeInRight"><code class="language-css">kaseiiki.default {
+  background: none;
+  color: black;
+}
+.kaseiiki.white {
+  background: white;
+  color: black;
+}
+.kaseiiki.blue {
+  background: blue;
+  color: white;
+}</code></pre>
 
     </div>
 
   </section>
 
 
-  <input type="button" value="Press the button" onclick="location.reload();" />
   <footer class="footer" data-energy="full">
-    <!--<div class="illustration-city">
-    </div>-->
     <div class="star-wars-intro">
-
+      <div class="reload blue" onclick="window.location.reload();"></div>
       <!-- Blue Intro Text -->
       <p class="intro-text">
         Now Loading.....
       </p>
-
-      <!-- Logo Image or Text goes in here -->
       <h2 class="main-logo">
         <img src="assets/css/images/sw.png">
       </h2>
 
-      <!-- All Scrolling Content Goes in here -->
       <div class="main-content">
 
         <div class="title-content">
@@ -217,6 +261,7 @@
   <script src="assets/js/type.js"></script>
   <script src="Golden Harvest.js"></script>
   <script src="assets/js/ws.js"></script>
+  <!--<script src="assets/jskeySt.js"></script>-->
   <script>
     $(document).ready(function () {
       // vh fix for iOS7 (Not that it works well on that anyway)
