--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <div class="top-links" data-energy="white">
     <a class="button" href="http://blue-corporation.jp/">Curriculum</a>
-    <a class="button button-github" href="http://blue-corporation.jp/" target="_blank">HOME</a>
+    <a class="button button-github" href="https://blue-inc.backlog.jp/wiki/JAVA/Home" target="_blank">HOME</a>
   </div>
 
 
